update client API package
