# pkg/swagger/orders_api.go
@@ -3,7 +3,7 @@
  *
  * API to submit, amend, and cancel orders for move.mil.
  *
- * API version: 0.0.4
+ * API version: 0.0.5
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 
@@ -99,7 +99,7 @@ func (a *OrdersApiService) GetOrders(ctx context.Context, uuid string) (Orders, 
      @param "edipi" (string) Electronic Data Interchange Personal Identifier, AKA the 10 digit DoD ID Number of the member
      @param "latestOnly" (bool) If true, look only at the latest Revision (by seqNum) of any set of Orders when applying the other Revision-specific parameters. If false, search all Revisions.  Defaults to false if omitted. 
      @param "status" (string) Return only Orders where the status of the latest Revision of the Orders matches the supplied status.
-     @param "issuingAuthority" (string) Name of the Issuing Authority of the Orders.
+     @param "issuer" (string) Name of the organization that issued the Orders.
  @return []Orders*/
 func (a *OrdersApiService) IndexOrders(ctx context.Context, localVarOptionals map[string]interface{}) ([]Orders,  *http.Response, error) {
 	var (
@@ -129,7 +129,7 @@ func (a *OrdersApiService) IndexOrders(ctx context.Context, localVarOptionals ma
 	if err := typeCheckParameter(localVarOptionals["status"], "string", "status"); err != nil {
 		return successPayload, nil, err
 	}
-	if err := typeCheckParameter(localVarOptionals["issuingAuthority"], "string", "issuingAuthority"); err != nil {
+	if err := typeCheckParameter(localVarOptionals["issuer"], "string", "issuer"); err != nil {
 		return successPayload, nil, err
 	}
 
@@ -145,8 +145,8 @@ func (a *OrdersApiService) IndexOrders(ctx context.Context, localVarOptionals ma
 	if localVarTempParam, localVarOk := localVarOptionals["status"].(string); localVarOk {
 		localVarQueryParams.Add("status", parameterToString(localVarTempParam, ""))
 	}
-	if localVarTempParam, localVarOk := localVarOptionals["issuingAuthority"].(string); localVarOk {
-		localVarQueryParams.Add("issuingAuthority", parameterToString(localVarTempParam, ""))
+	if localVarTempParam, localVarOk := localVarOptionals["issuer"].(string); localVarOk {
+		localVarQueryParams.Add("issuer", parameterToString(localVarTempParam, ""))
 	}
 	// to determine the Content-Type header
 	localVarHttpContentTypes := []string{  }
@@ -195,10 +195,9 @@ func (a *OrdersApiService) IndexOrders(ctx context.Context, localVarOptionals ma
  * @param ctx context.Context for authentication, logging, tracing, etc.
  @param ordersNum Orders number, corresponding to the ORDERS number (Army), the CT SDN (Navy, Marines), the SPECIAL ORDER NO (Air Force), the Travel Order No (Coast Guard), or the Travel Authorization Number (Civilian).
  @param memberId Electronic Data Interchange Personal Identifier of the member (preferred). If the member&#39;s EDIPI is unknown, then the Social Security Number may be provided instead. The Orders Gateway will then fetch the member&#39;s EDIPI using DMDC&#39;s Identity Web Services. Calls using the 9 digit SSN instead of the 10 digit EDIPI will take longer to respond due to the additional overhead. 
- @param issuingAuthority Name of the Issuing Authority of the Orders.
  @param revision 
  @return Orders*/
-func (a *OrdersApiService) PostRevision(ctx context.Context, ordersNum string, memberId string, issuingAuthority string, revision Revision) (Orders,  *http.Response, error) {
+func (a *OrdersApiService) PostRevision(ctx context.Context, ordersNum string, memberId string, revision Revision) (Orders,  *http.Response, error) {
 	var (
 		localVarHttpMethod = strings.ToUpper("Post")
 		localVarPostBody interface{}
@@ -217,7 +216,6 @@ func (a *OrdersApiService) PostRevision(ctx context.Context, ordersNum string, m
 
 	localVarQueryParams.Add("ordersNum", parameterToString(ordersNum, ""))
 	localVarQueryParams.Add("memberId", parameterToString(memberId, ""))
-	localVarQueryParams.Add("issuingAuthority", parameterToString(issuingAuthority, ""))
 	// to determine the Content-Type header
 	localVarHttpContentTypes := []string{ "application/json",  }
 
@@ -263,7 +261,7 @@ func (a *OrdersApiService) PostRevision(ctx context.Context, ordersNum string, m
 }
 
 /* OrdersApiService Make an amendment to or cancel an existing set of orders by UUID
- Creates a Revision of a set of orders. The Orders to be amended or canceled must already exist with the supplied UUID.  The seqNum in the supplied Revision must be unique, and not already present in the Orders. Nothing else is required to change in the Revision compared to any other Revision in the Orders.  ## Errors It is an error to specify a non-existent UUID.  It is an error to specify an already-created seqNum in the Revision. 
+ Creates a Revision of a set of orders. The Orders to be amended or canceled must already exist with the supplied UUID.  The seqNum in the supplied Revision must be unique, and not already present in the Orders. Nothing else is required to change in the Revision compared to any other Revision in the Orders.  ## Errors It is an error to specify a non-existent UUID.  It is an error to specify an already-created seqNum in the Revision.  It is an error to specify a UUID for orders originally created by a different issuer. 
  * @param ctx context.Context for authentication, logging, tracing, etc.
  @param uuid UUID of the orders to return
  @param revision 
